Fix(eos_cli_config_gen): Remove sorting from tacacs_servers.hosts

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/tacacs-servers.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/tacacs-servers.j2
@@ -6,7 +6,7 @@
 {# eos - tacacs servers #}
 {% if tacacs_servers is arista.avd.defined %}
 !
-{%     for host in tacacs_servers.hosts | arista.avd.natural_sort %}
+{%     for host in tacacs_servers.hosts %}
 {%         if host.host is arista.avd.defined %}
 {%             set host_cli = "tacacs-server host " ~ host.host %}
 {%         endif %}
