--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/monitor-connectivity.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/monitor-connectivity.j2
@@ -24,18 +24,18 @@
 
 #### Probing Configuration
 
-| Enabled | Interval | Default Interface Set |
-| ------- | -------- | --------------------- |
-| {{ not monitor_connectivity.shutdown | arista.avd.default(true) }} | {{ monitor_connectivity.interval | arista.avd.default('-') }} | {{ monitor_connectivity.local_interfaces | arista.avd.default('-') }} |
+| Enabled | Interval | Default Interface Set | Addres only |
+| ------- | -------- | --------------------- | ----------- |
+| {{ not monitor_connectivity.shutdown | arista.avd.default(true) }} | {{ monitor_connectivity.interval | arista.avd.default('-') }} | {{ monitor_connectivity.local_interfaces | arista.avd.default('-') }} | {{ monitor_connectivity.address_only | arista.avd.default(true) }} |
 {%     if monitor_connectivity.hosts is arista.avd.defined %}
 
 #### Host Parameters
 
-| Host Name | Description | IPv4 Address | Probing Interface Set | URL |
-| --------- | ----------- | ------------ | --------------------- | --- |
+| Host Name | Description | IPv4 Address | Probing Interface Set | Address only | URL |
+| --------- | ----------- | ------------ | --------------------- | ------------ | --- |
 {%         for host in monitor_connectivity.hosts | arista.avd.natural_sort('name') %}
 {%             if host.name is arista.avd.defined %}
-| {{ host.name }} | {{ host.description | arista.avd.default('-') }} | {{ host.ip | arista.avd.default('-') }} | {{ host.local_interfaces | arista.avd.default('-') }} | {{ host.url | arista.avd.default('-') }} |
+| {{ host.name }} | {{ host.description | arista.avd.default('-') }} | {{ host.ip | arista.avd.default('-') }} | {{ host.local_interfaces | arista.avd.default('-') }} | {{ host.address_only | arista.avd.default(true) }} | {{ host.url | arista.avd.default('-') }} |
 {%             endif %}
 {%         endfor %}
 {%     endif %}
@@ -43,11 +43,11 @@
 
 ### VRF Configuration
 
-| Name | Description | Default Interface Set |
-| ---- | ----------- | --------------------- |
+| Name | Description | Default Interface Set | Address only |
+| ---- | ----------- | --------------------- | ------------ |
 {%         for vrf in monitor_connectivity.vrfs | arista.avd.natural_sort('name') %}
 {%             if vrf.name is arista.avd.defined %}
-| {{ vrf.name }} | {{ vrf.description | arista.avd.default('-') }} | {{ vrf.local_interfaces | arista.avd.default('-') }} |
+| {{ vrf.name }} | {{ vrf.description | arista.avd.default('-') }} | {{ vrf.local_interfaces | arista.avd.default('-') }} | {{ vrf.address_only | arista.avd.default(true) }} |
 {%             endif %}
 {%         endfor %}
 {%         for vrf in monitor_connectivity.vrfs | arista.avd.natural_sort('name') %}
@@ -70,11 +70,11 @@
 
 ##### Host Parameters
 
-| Host Name | Description | IPv4 Address | Probing Interface Set | URL |
-| --------- | ----------- | ------------ | --------------------- | --- |
+| Host Name | Description | IPv4 Address | Probing Interface Set | Address only | URL |
+| --------- | ----------- | ------------ | --------------------- | ------------ | --- |
 {%                     for host in vrf.hosts | arista.avd.natural_sort('name') %}
 {%                         if host.name is arista.avd.defined %}
-| {{ host.name }} | {{ host.description | arista.avd.default('-') }} | {{ host.ip | arista.avd.default('-') }} | {{ host.local_interfaces | arista.avd.default('-') }} | {{ host.url | arista.avd.default('-') }} |
+| {{ host.name }} | {{ host.description | arista.avd.default('-') }} | {{ host.ip | arista.avd.default('-') }} | {{ host.local_interfaces | arista.avd.default('-') }} | {{ host.address_only | arista.avd.default(true) }} | {{ host.url | arista.avd.default('-') }} |
 {%                         endif %}
 {%                     endfor %}
 {%                 endif %}
