--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/management-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/management-security.j2
@@ -14,7 +14,7 @@ management security
 {%         set entropy_sources = [] %}
 {%         for source in ['hardware', 'haveged', 'cpu_jitter'] %}
 {%             if management_security.entropy_sources[source] is arista.avd.defined(true) %}
-{%                 set _ = entropy_sources.append(source.replace("_", " ")) %}
+{%                 do entropy_sources.append(source.replace("_", " ")) %}
 {%             endif %}
 {%         endfor %}
 {%         if entropy_sources %}
