--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -418,6 +418,17 @@ router bgp {{ router_bgp.as }}
 {%     for redistribute_route in router_bgp.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%         if redistribute_route.source_protocol is arista.avd.defined %}
 {%             set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%             if redistribute_route.source_protocol in ["ospf", "ospfv3"] %}
+{%                 if redistribute_route.ospf_match_internal is arista.avd.defined %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " match internal" %}
+{%                 endif %}
+{%                 if redistribute_route.ospf_match_external is arista.avd.defined %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " match external" %}
+{%                 endif %}
+{%                 if redistribute_route.ospf_match_nssa_external is arista.avd.defined %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " match " ~ redistribute_route.ospf_match_nssa_external %}
+{%                 endif %}
+{%             endif %}
 {%             if redistribute_route.source_protocol == "bgp" %}
 {%                 set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
 {%             elif redistribute_route.include_leaked is arista.avd.defined %}
@@ -859,6 +870,17 @@ router bgp {{ router_bgp.as }}
 {%         for redistribute_route in router_bgp.address_family_ipv4.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
 {%                 set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                 if redistribute_route.source_protocol in ["ospf", "ospfv3"] %}
+{%                     if redistribute_route.ospf_match_internal is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match internal" %}
+{%                     endif %}
+{%                     if redistribute_route.ospf_match_external is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match external" %}
+{%                     endif %}
+{%                     if redistribute_route.ospf_match_nssa_external is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match " ~ redistribute_route.ospf_match_nssa_external %}
+{%                     endif %}
+{%                 endif %}
 {%                 if redistribute_route.source_protocol == "bgp" %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
 {%                 elif redistribute_route.include_leaked is arista.avd.defined  and redistribute_route.source_protocol in ["connected", "static", "isis", "ospf", "ospfv3"] %}
@@ -908,6 +930,17 @@ router bgp {{ router_bgp.as }}
 {%         for redistribute_route in router_bgp.address_family_ipv4_multicast.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
 {%                 set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                 if redistribute_route.source_protocol in ["ospf", "ospfv3"] %}
+{%                     if redistribute_route.ospf_match_internal is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match internal" %}
+{%                     endif %}
+{%                     if redistribute_route.ospf_match_external is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match external" %}
+{%                     endif %}
+{%                     if redistribute_route.ospf_match_nssa_external is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match " ~ redistribute_route.ospf_match_nssa_external %}
+{%                     endif %}
+{%                 endif %}
 {%                 if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%                 endif %}
@@ -1015,6 +1048,17 @@ router bgp {{ router_bgp.as }}
 {%         for redistribute_route in router_bgp.address_family_ipv6.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
 {%                 set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                 if redistribute_route.source_protocol == "ospfv3" %}
+{%                     if redistribute_route.ospf_match_internal is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match internal" %}
+{%                     endif %}
+{%                     if redistribute_route.ospf_match_external is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match external" %}
+{%                     endif %}
+{%                     if redistribute_route.ospf_match_nssa_external is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match " ~ redistribute_route.ospf_match_nssa_external %}
+{%                     endif %}
+{%                 endif %}
 {%                 if redistribute_route.source_protocol == "bgp" %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
 {%                 elif redistribute_route.include_leaked is arista.avd.defined %}
@@ -1072,6 +1116,17 @@ router bgp {{ router_bgp.as }}
 {%         for redistribute_route in router_bgp.address_family_ipv6_multicast.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
 {%                 set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                 if redistribute_route.source_protocol in ["ospf", "ospfv3"] %}
+{%                     if redistribute_route.ospf_match_internal is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match internal" %}
+{%                     endif %}
+{%                     if redistribute_route.ospf_match_external is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match external" %}
+{%                     endif %}
+{%                     if redistribute_route.ospf_match_nssa_external is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match " ~ redistribute_route.ospf_match_nssa_external %}
+{%                     endif %}
+{%                 endif %}
 {%                 if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%                 endif %}
@@ -1603,6 +1658,17 @@ router bgp {{ router_bgp.as }}
 {%         for redistribute_route in vrf.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%             if redistribute_route.source_protocol is arista.avd.defined %}
 {%                 set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                 if redistribute_route.source_protocol in ["ospf", "ospfv3"] %}
+{%                     if redistribute_route.ospf_match_internal is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match internal" %}
+{%                     endif %}
+{%                     if redistribute_route.ospf_match_external is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match external" %}
+{%                     endif %}
+{%                     if redistribute_route.ospf_match_nssa_external is arista.avd.defined %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " match " ~ redistribute_route.ospf_match_nssa_external %}
+{%                     endif %}
+{%                 endif %}
 {%                 if redistribute_route.source_protocol == "bgp" %}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
 {%                 elif redistribute_route.include_leaked is arista.avd.defined %}
@@ -1739,6 +1805,17 @@ router bgp {{ router_bgp.as }}
 {%             for redistribute_route in vrf.address_family_ipv4.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%                 if redistribute_route.source_protocol is arista.avd.defined %}
 {%                     set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                     if redistribute_route.source_protocol in ["ospf", "ospfv3"] %}
+{%                         if redistribute_route.ospf_match_internal is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match internal" %}
+{%                         endif %}
+{%                         if redistribute_route.ospf_match_external is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match external" %}
+{%                         endif %}
+{%                         if redistribute_route.ospf_match_nssa_external is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match " ~ redistribute_route.ospf_match_nssa_external %}
+{%                         endif %}
+{%                     endif %}
 {%                     if redistribute_route.source_protocol == "bgp" %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
 {%                     elif redistribute_route.include_leaked is arista.avd.defined %}
@@ -1788,6 +1865,17 @@ router bgp {{ router_bgp.as }}
 {%             for redistribute_route in vrf.address_family_ipv4_multicast.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%                 if redistribute_route.source_protocol is arista.avd.defined %}
 {%                     set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                     if redistribute_route.source_protocol in ["ospf", "ospfv3"] %}
+{%                         if redistribute_route.ospf_match_internal is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match internal" %}
+{%                         endif %}
+{%                         if redistribute_route.ospf_match_external is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match external" %}
+{%                         endif %}
+{%                         if redistribute_route.ospf_match_nssa_external is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match " ~ redistribute_route.ospf_match_nssa_external %}
+{%                         endif %}
+{%                     endif %}
 {%                     if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%                     endif %}
@@ -1863,6 +1951,17 @@ router bgp {{ router_bgp.as }}
 {%             for redistribute_route in vrf.address_family_ipv6.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%                 if redistribute_route.source_protocol is arista.avd.defined %}
 {%                     set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                     if redistribute_route.source_protocol == "ospfv3" %}
+{%                         if redistribute_route.ospf_match_internal is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match internal" %}
+{%                         endif %}
+{%                         if redistribute_route.ospf_match_external is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match external" %}
+{%                         endif %}
+{%                         if redistribute_route.ospf_match_nssa_external is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match " ~ redistribute_route.ospf_match_nssa_external %}
+{%                         endif %}
+{%                     endif %}
 {%                     if redistribute_route.source_protocol == "bgp" %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " leaked" %}
 {%                     elif redistribute_route.include_leaked is arista.avd.defined %}
@@ -1912,6 +2011,17 @@ router bgp {{ router_bgp.as }}
 {%             for redistribute_route in vrf.address_family_ipv6_multicast.redistribute_routes | arista.avd.natural_sort('source_protocol') %}
 {%                 if redistribute_route.source_protocol is arista.avd.defined %}
 {%                     set redistribute_route_cli = "redistribute " ~ redistribute_route.source_protocol %}
+{%                     if redistribute_route.source_protocol in ["ospf", "ospfv3"] %}
+{%                         if redistribute_route.ospf_match_internal is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match internal" %}
+{%                         endif %}
+{%                         if redistribute_route.ospf_match_external is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match external" %}
+{%                         endif %}
+{%                         if redistribute_route.ospf_match_nssa_external is arista.avd.defined %}
+{%                             set redistribute_route_cli = redistribute_route_cli ~ " match " ~ redistribute_route.ospf_match_nssa_external %}
+{%                         endif %}
+{%                     endif %}
 {%                     if redistribute_route.include_leaked is arista.avd.defined and redistribute_route.source_protocol == "isis" %}
 {%                         set redistribute_route_cli = redistribute_route_cli ~ " include leaked" %}
 {%                     endif %}
